--- a/src/main/resources/assets/autoattack/lang/pt_br.json
+++ b/src/main/resources/assets/autoattack/lang/pt_br.json
@@ -4,6 +4,9 @@
   "autoattack.midnightconfig.preventsHittingBlocks": "Previne você de quebrar blocos com todas as ferramentas",
   "autoattack.midnightconfig.preventsHittingBlocksSwords": "Previne você de quebrar blocos apenas com espadas",
   "autoattack.midnightconfig.cleanCut": "Atacar inimigos através de obstáculos (similar ao mod CleanCut)",
+  "autoattack.midnightconfig.autoBow": "Lança automaticamente o Arco e Flecha",
+  "autoattack.midnightconfig.autoCrossBow": "Lança automaticamente o CrossBow",
+  "autoattack.midnightconfig.autoTrident": "Lança automaticamente o Tridente",
 
   "key.autoattack.preventsHittingBlocks": "Alterna entre Prevenir a quebra de blocos",
   "category.autoattack.autoattack": "AutoAttack",
