--- a/src/main/resources/assets/autoattack/lang/pt_br.json
+++ b/src/main/resources/assets/autoattack/lang/pt_br.json
@@ -1,6 +1,7 @@
 {
   "autoattack.midnightconfig.title": "Configuração do AutoAttack",
   "autoattack.midnightconfig.text1": "Auto Attack faz com que segurar o botão de ataque auto ataca com a espada.",
+  "autoattack.midnightconfig.checkUpdate": "Verifica se ha uma nova atualização do mod",
   "autoattack.midnightconfig.preventsHittingBlocks": "Previne você de quebrar blocos com todas as ferramentas",
   "autoattack.midnightconfig.preventsHittingBlocksSwords": "Previne você de quebrar blocos apenas com espadas",
   "autoattack.midnightconfig.cleanCut": "Atacar inimigos através de obstáculos (similar ao mod CleanCut)",
