--- a/src/main/resources/assets/autoattack/lang/en_us.json
+++ b/src/main/resources/assets/autoattack/lang/en_us.json
@@ -8,10 +8,14 @@
   "autoattack.midnightconfig.autoBow": "Automatically shoot the Bow",
   "autoattack.midnightconfig.autoCrossBow": "Automatically shoot the CrossBow",
   "autoattack.midnightconfig.autoTrident": "Automatically shoot the Trident",
+  "autoattack.midnightconfig.afkAttack": "Automatically attacks while AFK",
 
-  "key.autoattack.preventsHittingBlocks": "Toggle Prevents from hitting blocks",
   "category.autoattack.autoattack": "AutoAttack",
+  "key.autoattack.preventsHittingBlocks": "Toggle Prevents from hitting blocks",
+  "key.autoattack.afkAttack": "Toggle Attack in afk mode",
 
   "text.KeyBindingConfig.preventsHittingBlocks.OFF": "Prevents hitting blocks in all tools OFF!",
-  "text.KeyBindingConfig.preventsHittingBlocks.ON": "Prevents hitting blocks in all tools ON!"
+  "text.KeyBindingConfig.preventsHittingBlocks.ON": "Prevents hitting blocks in all tools ON!",
+  "text.KeyBindingConfig.afkAttack.OFF": "Attack in afk mode OFF!",
+  "text.KeyBindingConfig.afkAttack.ON": "Attack in afk mode ON!"
 }
