--- a/src/main/resources/assets/autoattack/lang/en_us.json
+++ b/src/main/resources/assets/autoattack/lang/en_us.json
@@ -5,17 +5,22 @@
   "autoattack.midnightconfig.preventsHittingBlocks": "Prevents you from hitting blocks in all tools",
   "autoattack.midnightconfig.preventsHittingBlocksSwords": "Prevents you from hitting blocks only in swords",
   "autoattack.midnightconfig.cleanCut": "Attack enemies through obstructions (similar to CleanCut Mod)",
-  "autoattack.midnightconfig.autoBow": "Automatically shoot the Bow",
-  "autoattack.midnightconfig.autoCrossBow": "Automatically shoot the CrossBow",
-  "autoattack.midnightconfig.autoTrident": "Automatically shoot the Trident",
+  "autoattack.midnightconfig.autoBow": "Enables automatic shots with the bow",
+  "autoattack.midnightconfig.autoCrossBow": "Enables automatic shots with the crossbow",
+  "autoattack.midnightconfig.autoTrident": "Enables automatic shots with the trident",
   "autoattack.midnightconfig.afkAttack": "Automatically attacks while AFK",
+  "autoattack.midnightconfig.alwaysAttack": "Attacks even when there are no entities in range",
+
 
   "category.autoattack.autoattack": "AutoAttack",
   "key.autoattack.preventsHittingBlocks": "Toggle Prevents from hitting blocks",
   "key.autoattack.afkAttack": "Toggle Attack in afk mode",
+  "key.autoattack.autoRanged": "Toggle automatic fire with ranged weapons",
 
   "text.KeyBindingConfig.preventsHittingBlocks.OFF": "Prevents hitting blocks in all tools OFF!",
   "text.KeyBindingConfig.preventsHittingBlocks.ON": "Prevents hitting blocks in all tools ON!",
   "text.KeyBindingConfig.afkAttack.OFF": "Attack in afk mode OFF!",
-  "text.KeyBindingConfig.afkAttack.ON": "Attack in afk mode ON!"
+  "text.KeyBindingConfig.afkAttack.ON": "Attack in afk mode ON!",
+  "text.KeyBindingConfig.autoRanged.OFF": "Ranged attack OFF!",
+  "text.KeyBindingConfig.autoRanged.ON": "Ranged attack ON!"
 }
